@@ -112,6 +112,8 @@ Revision 4.2.6rc2
 - Fix to file descriptor leak at MibBuilder.
 - Fix to rfc2576.v2ToV1() to ignore impossible errorStatus.
 - Fix to rfc2576.v1ToV2() to reset ErrorStatus==noSuchName on proxying.
+- Fix to smi.builder to explicitly fail on any MIB file access error
+  but ENOENT.
 
 Revision 4.2.5
 --------------
